--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "keyv-file",
-  "version": "0.1.14",
+  "name": "keyv-ipfs",
+  "version": "0.1.1",
   "description": "IPFS storage adapter for Keyv. Compatible with Cacheous",
   "main": "lib/index.js",
   "typings": "lib/index",
